Fix : adding pre hidding screen on mobile launch

--- a/app/assets/stylesheets/components/_default.scss
+++ b/app/assets/stylesheets/components/_default.scss
@@ -55,6 +55,10 @@ body, html {
     display: none !important;
   }
 
+  .js-pre-hide {
+    display: none;
+  }
+
   #about_section,
   #projects_section,
   #contact_section {
